# raoa2

./: .gitignore  .graphqlconfig  angular.json  deploy.sh  graphql.config.yml  karma.conf.js  package-lock.json  package.json  pom.xml  run-docker.sh  schema.graphql
.github/workflows/: codeql-analysis.yml  maven.yml
raoa/: Chart.yaml  values.yaml
raoa-helm/: pom.xml
raoa-helm/raoa/: Chart.yaml  values.yaml
raoa-helm/raoa/templates/: NOTES.txt  _helpers.tpl  certificate.yaml  deployment-raoa-coordinator.yaml  deployment-raoa-image-processor.yaml  elasticsearch.yaml  pvc-cache.yaml  service-coordinator-mgmt.yaml
raoa-image-processor/: deploy.sh  pom.xml
raoa-image-thumbnailer/: pom.xml
raoa-importer/: pom.xml
raoa-job-coordinator/: deploy.sh  pom.xml
raoa-libs/: .gitignore  pom.xml
raoa-libs-elastic/: pom.xml
raoa-media-processor/: pom.xml
raoa-sync-client/: pom.xml
raoa-viewer/: deploy.sh  graphql.config.yml  pom.xml
raoa-viewer-angular/: README.md  package-lock.json
raoa-viewer-angular/src/: index.html
raoa-viewer-angular/src/app/: graphql.module.ts
raoa-viewer-client/: .browserslistrc  .gitignore  .graphqlconfig  angular.json  codegen.yml  deploy.sh  ionic.config.json  ngsw-config.json  package-lock.json  package.json  pom.xml  proxy.js  schema.graphql  tsconfig.app.json  tsconfig.json
raoa-viewer-client-oauth2/: .browserslistrc  .gitignore  README.md  angular.json  codegen.yml  karma.conf.js  package-lock.json  package.json  pom.xml  proxy.js  tsconfig.app.json  tsconfig.json  tslint.json
raoa-viewer-client-oauth2/e2e/src/: app.e2e-spec.ts
raoa-viewer-client-oauth2/src/: index.html  manifest.webmanifest  styles.css
raoa-viewer-client-oauth2/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
raoa-viewer-client-rust/: .gitignore  Cargo.toml  Trunk.toml  build.rs  index-yew.html  index.html  pom.xml
raoa-viewer-client-rust/assets/js/: manifest.json  sw.js
raoa-viewer-client-rust/graphql/: AlbumContent.graphql  GetAlbumDetails.graphql  schema.graphql
raoa-viewer-client-rust/node/: main.js  package-lock.json  package.json  rollup.config.js
raoa-viewer-client-rust/node/src/: local.scss  styles.scss  swiper.js
raoa-viewer-client-rust/src/: error.rs  main.rs
raoa-viewer-client-rust/src/components/: entry_header.rs  image.rs
raoa-viewer-client-rust/src/data/: mod.rs  storage.rs
raoa-viewer-client-rust/src/data/server_api/: mod.rs
raoa-viewer-client-rust/src/data/server_api/graphql/: mod.rs  model.rs
raoa-viewer-client-rust/src/main/rust/client/: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html  local.css
raoa-viewer-client-rust/src/main/rust/client/graphql/: UserPermissions.graphql
raoa-viewer-client-rust/src/main/rust/client/node/: package-lock.json  package.json  rollup.config.js
raoa-viewer-client-rust/src/main/rust/client/node/src/: swiper.js
raoa-viewer-client-rust/src/main/rust/client/src/: data.rs  error.rs  main.rs  storage.rs  utils.rs
raoa-viewer-client-rust/src/main/rust/client/src/components/: album_header.rs  image.rs  mod.rs
raoa-viewer-client-rust/src/main/rust/client/src/data/: mod.rs  session.rs  storage.rs
raoa-viewer-client-rust/src/main/rust/client/src/data/server_api/: mod.rs
raoa-viewer-client-rust/src/main/rust/client/src/data/server_api/graphql/: mod.rs
raoa-viewer-client-rust/src/main/rust/client/src/model/: mod.rs
raoa-viewer-client-rust/src/main/rust/client/src/pages/: app.rs  mod.rs
raoa-viewer-client-rust/src/main/rust/client/src/pages/album_list/: mod.rs
raoa-viewer-client-rust/src/main/rust/client/src/pages/app/: mod.rs  routing.rs
raoa-viewer-client-rust/src/main/rust/client/src/pages/single_album/: mod.rs  row_iterator.rs
raoa-viewer-client-rust/src/main/rust/client/src/pages/single_entry/: mod.rs
raoa-viewer-client-rust/src/main/rust/client/src/serde/: mod.rs
raoa-viewer-client-rust/src/main/rust/client/src/server_api/: mod.rs
raoa-viewer-client-rust/src/main/rust/client/src/server_api/graphql/: mod.rs
raoa-viewer-client-rust/src/main/rust/client/src/utils/: mod.rs  swiper.rs
raoa-viewer-client-rust/src/pages/: mod.rs
raoa-viewer-client-rust/src/pages/album_list/: mod.rs
raoa-viewer-client-rust/src/pages/app/: mod.rs  routing.rs
raoa-viewer-client-rust/src/pages/single_album/: mod.rs  row_iterator.rs  util.rs
raoa-viewer-client-rust/src/pages/single_entry/: mod.rs
raoa-viewer-client-rust/src/utils/: iterator.rs  mod.rs  swiper.rs
raoa-viewer-client/e2e/src/: app.e2e-spec.ts
raoa-viewer-client/src/: global.scss  index.html  main.ts  manifest.webmanifest  polyfills.ts  styles.css
raoa-viewer-client/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  auth-guard.service.ts  auth.guard.ts  authenticate-interceptor.service.ts  constants.ts  filesize.pipe.ts  graphql.module.ts  list-albums.query.graphql  socialloginConfig.ts  update-credentials.mutate.graphql
raoa/templates/: _helpers.tpl  configmap-coordinator.yaml  configmap-image-processor.yaml  configmap-importer.yaml  configmap-viewer.yaml  cronjob-import.yaml  deployment-raoa-coordinator.yaml  deployment-raoa-image-processor.yaml  deployment-raoa-viewer.yaml  elasticsearch.yaml  ingress.yaml  priorityclass-essential.yaml  priorityclass-low.yaml  pvc-cache.yaml  pvc-repository.yaml  role-secret-reader.yaml  service-account-cluster-read-role-binding.yaml  service-account-read-secrets-role-binding.yaml  service-actuator-mgmt.yaml  service-coordinator-mgmt.yaml  service-monitor.yaml  service-raoa-viewer.yaml  service-viewer-mgmt.yaml  serviceaccount.yaml
src/: index.html
src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts  graphql.module.ts
sync/: Dockerfile  passwd  sync.sh
(+604 files in other folders)
