[package]
name = "raoa-viewer-client"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-nested-router = "0.6.1"
patternfly-yew = "0.5.6"
graphql_client = { version = "0.13.0", features = ["reqwest-rustls"] }
jwt = "0.16.0"
google-signin-client = "0.1.2"
gloo = "0.11.0"
log = "0.4.20"
wasm-logger = "0.2.0"
reqwest = { version = "0.11.13", features = ["rustls-tls", "json"] }
thiserror = "1.0.56"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde-wasm-bindgen = "0.6.3"
tokio = { version = "1.33.0", features = ["sync"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
wasm-timer = "0.2.5"
rexie = "0.5.0"
chrono = "0.4.31"
ordered-float = { version = "4.2.0", features = ["serde"] }

[build-dependencies]
anyhow = "1.0.75"