[package]
name = "raoa-viewer-client"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-nested-router = "0.7.0"
patternfly-yew = { version = "0.6.1", git = "https://github.com/koa/patternfly-yew.git" }
graphql_client = { version = "0.14.0", features = ["reqwest-rustls"] }
jwt = "0.16.0"
google-signin-client = { version = "0.2.0-SNAPSHOT", git = "https://git.panter.ch/open-source/google-signin-client.git" }
gloo = { version = "0.11.0", features = ["file", "storage"] }
log = "0.4.20"
wasm-logger = "0.2.0"
reqwest = { version = "0.11.13", features = ["rustls-tls", "json"] }
thiserror = "1.0.56"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.69", features = ["Blob", 'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window', "CacheStorage", "Cache"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde-wasm-bindgen = "0.6.3"
tokio = { version = "1.33.0", features = ["sync"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
wasm-timer = "0.2.5"
rexie = "0.5.0"
chrono = "0.4.31"
ordered-float = { version = "4.2.0", features = ["serde"] }
wasm-bindgen-futures = "0.4.42"
itertools = "0.13.0"
gloo-events = "0.2.0"
self_cell = "1.0.4"



[build-dependencies]
anyhow = "1.0.75"

[profile.release]
debug = true
